[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmi-pv-forecast"
version = "0.1.0"
description = "Forecasting tools for FMI PV data"
authors = [
    { name = "Timo Salola", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "fmiopendata",
    "pvlib"
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]